==> openwch/ch32h417/EVT/EXAM/PIOC/PIOC_UART/Common/hardware.c <==
#include "hardware.h"
#include "string.h"
#include "ch32h417_pioc.h"
#define  UART_SFR_ADDR1     ((uint8_t *)&(PIOC->D8_DATA_REG8))
#define  UART_SFR_ADDR2     ((uint8_t *)&(PIOC->D8_DATA_REG16))
#define  R16_DATA_REG24_25  (*((volatile unsigned short *)(PIOC_SFR_BASE+0x38))) // RW/RW, data buffer 24~25

void PIOC_IRQHandler( void )
{   
    if((R8_SYS_CFG&RB_INT_REQ)!=RESET)
    {
		//Data reception mode
        if((R8_DATA_REG7 & 0X01) == 0)
        {
            rx_buf[rx++] = R8_DATA_REG31;
        }
        //Data Transmission Mode
        //Double buffering with each buffer size of 8 bytes
        else
        {
            if(PIOC_TX_FLAG==1)
            {
                if(PIOC_TX_RemainLEN<=8)
                {
                    memcpy( UART_SFR_ADDR1, PIOC_TX_ADDR, PIOC_TX_RemainLEN );
                    PIOC_TX_FLAG=0;
                }
                else
                {
                    memcpy( UART_SFR_ADDR1, PIOC_TX_ADDR, 8 );
                    PIOC_TX_ADDR += 8;
                    PIOC_TX_RemainLEN -= 8;
                    PIOC_TX_FLAG=2;
                }
            }
            else if(PIOC_TX_FLAG==2)
            {
                if(PIOC_TX_RemainLEN<=8)
                {
                    memcpy( UART_SFR_ADDR2, PIOC_TX_ADDR, PIOC_TX_RemainLEN );
                    PIOC_TX_FLAG=0;
                }
                else
                {
                    memcpy( UART_SFR_ADDR2, PIOC_TX_ADDR, 8 );
                    PIOC_TX_ADDR += 8;
                    PIOC_TX_RemainLEN -= 8;
                    PIOC_TX_FLAG=1;
                }
            }
        }
        R8_CTRL_RD=11;    // False write any value to R8_CTRL_RD, clear interrupt flag
    }
}

void Hardware(void)
{
    int i=0;
    int j=0;

    GPIO_Toggle_INIT();
    PIOC_INIT();
    PIOC_UART_INIT(PIOC_baudrate,PIOC_parity,PIOC_stopbits,PIOC_word_lenth);
    R8_CTRL_WR = 0X33;                  // To R8_CTRL_WR write any value,then start
    PIOC_UART_SEND(pbuf1,sizeof(pbuf1));
    Delay_Ms(1000);

    while(1)
	{
       if(rx>=30)
        {
            for(j=0;j<30;j++)
            {
                printf("RX DATA:%x\r\n",rx_buf[j]);
            }
            printf("RX STATR:%x\r\n",R8_DATA_REG30);    //0X01: PE  0X02: FE  0X04: NE
            R8_DATA_REG30=0;
            rx=0;
        }
        Delay_Ms(500);
        GPIO_WriteBit(GPIOA, GPIO_Pin_0, (i == 0) ? (i = Bit_SET) : (i = Bit_RESET));
	}

}
